# pySembrane

./: 1.CaseStudies_clean.ipynb  AspenMem.ipynb  AspenMem_results.csv  AspenMem_results_v2.csv  AspenMem_results_v2.xlsx  OptRes_best_MOFs_v2.csv  README.md
Data/: MOF_adsorptionHN.csv
Usage & examples/: 0.LiteratureVal.ipynb  1.CaseStudies_clean.ipynb  2.Usage.ipynb  240219_Casestudy1_data_rev.csv  240219_Casestudy1_results.csv  240221_Casestudy2_results.csv  PFM_v1.py  PFM_v2.py  simulator.py  tlqkf.py  tlqkftlqkf.py
Usage & examples/Casestudy/: GreenNH3.ads  GreenNH3.appdf  GreenNH3.apw  GreenNH3.apwz  GreenNH3.bkp  GreenNH3.def  GreenNH3.his  _0954zrz.ads  _0954zrz.appdf  _0954zrz.bks  _0954zrz.def  _0954zrz.edf  _0954zrz.his  _0954zrz.in0  _0954zrz.inm  _0954zrz.inx  _0954zrz.jnl  _0954zrz.nin  _0954zrz.nis  _0954zrz.scr  _0954zrz.sin  _0954zrz.sor  _0954zrz.sum  _1524gbp.ads  _1524gbp.appdf  _1524gbp.bks  _1524gbp.def  _1524gbp.edf  _1524gbp.his  _1524gbp.in0  _1524gbp.inm  _1524gbp.inx  _1524gbp.jnl  _1524gbp.nin  _1524gbp.nis  _1524gbp.scr  _1524gbp.sin  _1524gbp.sor  _1524gbp.sum  _2012vuo.ads  (+61 more)
docs/source/: Calculator.rst  Example1.rst  SimulAnalyzer.rst  conf.py  pySembrane.rst
pySembrane/: calculator.py  simulator.py
source/: Citation.rst  Example3.rst  Examples.rst  Installation.rst  Validation.rst  conf.py
version update/: pyproject.toml  setup.py
version update/pySembrane/: simulator.py
version update/pysembrane.egg-info/: PKG-INFO
